k8s/infrastructure/gatus/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gatus
  namespace: gatus
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Gatus"
    gethomepage.dev/description: "Service health status"
    gethomepage.dev/group: "monitoring"
    gethomepage.dev/icon: "gatus.png"
    gethomepage.dev/href: "https://status.item.fyi"
    gethomepage.dev/siteMonitor: "http://gatus.gatus.svc.cluster.local"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=gatus"
    gethomepage.dev/widget.type: "gatus"
    gethomepage.dev/widget.url: "http://gatus.gatus.svc.cluster.local"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`status.item.fyi`)
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: gatus
          port: 80
  tls: {}
